fix: generate show time